[package]
name = "crabchatserver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tungstenite = "0.26.2"
tokio-tungstenite = "0.26.2"
futures-util = "0.3"
anyhow = "1.0.98"
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.16.0", features = ["v4"] }
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
